fix: Fixed z-index of dropdown menu to appear in front

--- a/src/css/_input.scss
+++ b/src/css/_input.scss
@@ -174,6 +174,7 @@ input {
   @extend %flex-v;
   position: absolute;
   top: 100%;
+  z-index: 15;
   background-color: $div-background-color;
   padding: $default-padding;
   border: $border;
